Version 1.1.0-CVS (?? ??? 2006)
 - Fixed bug 1510761: missing 'back to my calendar' in the 'top-menue'
 - Fixed bug 1497931: Weird repeating events - read on
 - Fixed bug 1509045: repeated events seem to be shown out of order
 - Fixed bug 1510599: Adding event to public access error.
 - Fixed bug 1508681: 'convert to GMT' - button is missing
 - Fixed bug 1507985: event participant shown in public popup
 - Fixed bug 1506417: user-imap.php (rev 1.10) gave me a parse error on line 151
 - Changed view_t.php to use $ENTRY_SLOT value and improve event placement
 - Fixed bug 1503762: Table cell bg for current day not diplayed on weekends
 - Fixed bug 1505083: get_weekday_before doesn't return a value on
 - Fixed bug 1502420: daily repeat doesn't skip weekend
 - Fixed bug 1414471: missing 'back to my calendar' in the trailer for 'non_user'
 - Fixed bug 1366151: NUC's cannot be handled by their admins
 - Fixed bug 1499150: Events Not Wordwrapping Correctly
 - Implemented new method of restricting direct file access
 - Implemented PATCH 1498087: Add simple navigation to help
 - Implemented PATCH 1498201: Don't print ThemeMenubar
 - Fixed bug 1497840: Entries not shown in Day view for current day +GMT TZ only
 - Fixed bug 1472286: Event Creation Aborted Upon Error
 - Fixed bug 1476212: Conflict check with repeating events and DST
 - Fixed bug 1428140: 'top-menue' - truncated using IE6
 - Fixed bug 1496308: error message regarding 'cachedir'
 - Implemented RFE 1496319: Left align "Users" column in "Week (Users vertical)" view
 - Implemented RFE 1176218: can not select category in year-view
 - Implemented RFE 1075840: "Manage calendar of" during management
 - Fixed bug 1490641: 'Reports' out by 2 weeks
 - Implemented PATCH 1470681: New preference: DISPLAY_TASKS_YEAR
 - Implemented PATCH 1459888: New preference: DISPLAY_MINUTES
 - Fixed bug 1493472: entered 'task' will not be displayed on day.php
 - Fixed bug 1495426: grid incomplete at preview of colors