@@ -1,4 +1,5 @@
 Version 1.1.0-CVS (?? ??? 2006)
+ - Fixed bug 1511120: 'unapproved-icon' in 'top-menue' not properly displayed
  - Fixed bug 1510761: missing 'back to my calendar' in the 'top-menue'
  - Fixed bug 1497931: Weird repeating events - read on
  - Fixed bug 1509045: repeated events seem to be shown out of order
